# lab05homework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  hello_world.cpp
.github/workflows/: ci.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
tests/: account_test.cpp  test1.cpp  transaction_test.cpp
